[gd_scene load_steps=2 format=3 uid="uid://d2spukb5aaeyw"]

[ext_resource type="Script" path="res://Minigame/minigame_ui.gd" id="1_vkj6r"]

[node name="MinigameUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_vkj6r")

[node name="RowContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(10, 0)
layout_mode = 0
offset_left = 54.0
offset_top = 20.0
offset_right = 64.0
offset_bottom = 178.0

[node name="RowText" type="RichTextLabel" parent="RowContainer"]
custom_minimum_size = Vector2(10, 32)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 8
bbcode_enabled = true
text = "[center][color=black]0"

[node name="ColContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = -1.0
offset_right = 257.0
offset_bottom = 9.0

[node name="ColText" type="RichTextLabel" parent="ColContainer"]
custom_minimum_size = Vector2(32, 10)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 8
bbcode_enabled = true
text = "[center][color=black]0"
scroll_active = false

[node name="EnemyLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ItemLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SwitchMode" type="Button" parent="."]
layout_mode = 0
offset_left = 53.0
offset_top = 1.0
offset_right = 61.0
offset_bottom = 9.0
focus_mode = 0
toggle_mode = true
